--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title></title>
+    <title>Numerical Ping Pong</title>
+    <script src="javascript/jquery-1.12.1.js" charset="utf-8"></script>
+    <script src="javascript/scripts.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="css/bootstrap.css" media="all" type="text/css">
+    <link rel="stylesheet" href="css/styles.css" media="all" type="text/css">
   </head>
   <body>
+    <h1>Numerical Ping Pong</h1>
+    <h3>Directions go here</h3>
+    <form id="numbers" action="index.html" method="post">
+      <label for="number">Type any number to play Numerical Ping Pong!</label>
+      <input type="text" id="number" value="">
+    </form>
+
+    <div id="results"></div>
+
 
   </body>
 </html>
