Attempt to fix communication between jQuery and HTML.

--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
   <body>
     <h1>Numerical Ping Pong</h1>
     <h3>Directions go here</h3>
-    <form id="numbers" action="index.html" method="post">
+    <form>
       <label for="number">Type any number to play Numerical Ping Pong!</label>
       <input type="text" id="number" value="">
+      <button type="submit" class="btn btn-warning">Submit</button>
     </form>
 
-    <div id="results"></div>
+    <div id="numerical-range">
+      <ul></ul>
+    </div>
 
 
   </body>
