Attempt to fix communication between jQuery, js, and HTML.

--- a/index.html
+++ b/index.html
@@ -11,15 +11,11 @@
     <h1>Numerical Ping Pong</h1>
     <h3>Directions go here</h3>
     <form>
-      <label for="number">Type any number to play Numerical Ping Pong!</label>
+      <label for="number">Type any number: </label>
       <input type="text" id="number" value="">
-      <button type="submit" class="btn btn-warning">Submit</button>
+      <button type="submit" id="submit" class="btn btn-warning">Submit</button>
     </form>
-
-    <div id="numerical-range">
-      <ul></ul>
-    </div>
-
+    <div id="result"></div>
 
   </body>
 </html>
