Attempt to fix communication between jQuery and HTML.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Numerical Ping Pong</title>
-    <script src="javascript/jquery-1.12.1.js" charset="utf-8"></script>
-    <script src="javascript/scripts.js" charset="utf-8"></script>
+    <script src="javascript/jquery-1.12.1.js"></script>
+    <script src="javascript/scripts.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css" media="all" type="text/css">
     <link rel="stylesheet" href="css/styles.css" media="all" type="text/css">
+    <title>Numerical Ping Pong</title>
   </head>
   <body>
     <h1>Numerical Ping Pong</h1>
