--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
         <input type="text" id="number" value="">
         <button type="submit" id="submit" class="btn btn-warning">Submit</button>
       </form>
-      <div id="result"></div>
+      <div>
+        <ul id="result"></ul>
       </div>
+    </div>
 
   </body>
 </html>
