Change styling of appended information to return an unordered list.

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <input type="text" id="number" value="">
         <button type="submit" id="submit" class="btn btn-warning">Submit</button>
       </form>
-      <div>
-        <ul id="result"></ul>
+      <div id="result">
+        <ul></ul>
       </div>
     </div>
 
